--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,101 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Roboto&display=swap");
+html {
+  margin: 0px;
+  height: 100%;
+  width: 100%;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Roboto", sans-serif;
+  /* font: 14px "Century Gothic", Futura, sans-serif; */
+  font-size: 40px;
+  background-image: url("./abstract.jpg");
+  background-size: 100%;
+  margin: 0px;
+  min-height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ol,
+ul {
+  padding-left: 30px;
+}
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.status {
+  margin-bottom: 10px;
+}
+
+.square {
+  background: #fff;
+  border: 5px solid #073b4c;
+  float: left;
+  font-size: 180px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 200px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 10px;
+  text-align: center;
+  width: 200px;
+  color: #118ab2;
+}
+
+.square:focus {
+  outline: none;
+}
+
+.kbd-navigation .square:focus {
+  background: #ddd;
+}
+
+.game {
+  display: flex;
+  flex-direction: row;
+  padding: 5px;
+}
+
+.game-info {
+  margin-left: 50px;
+}
+
+img:nth-child(1) {
+  max-width: 30px;
+}
+
+.btn {
+  width: 400px;
+  height: 50px;
+  border-radius: 40px;
+  font-family: inherit;
+  font-size: 30px;
+}
+
+/* .list {
+  height: 30px;
+  width: 30px;
+} */
+
+div:nth-child(1) {
+  color: white;
+  font-size: 50px;
+  border-left: 10px;
+}
+
+.game-board {
+  display: flex;
+  align-items: center;
+}
+
+li::marker {
+  margin-left: 10px;
+  padding-left: 10px;
 }
