--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ html {
 body {
   font-family: "Roboto", sans-serif;
   /* font: 14px "Century Gothic", Futura, sans-serif; */
-  font-size: 40px;
+  font-size: 2.5rem;
   background-image: url("./abstract.jpg");
   background-size: 100%;
   margin: 0px;
@@ -16,11 +16,16 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-image: no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 ol,
 ul {
-  padding-left: 30px;
+  padding-left: 1.875rem;
 }
 
 .board-row:after {
@@ -30,22 +35,22 @@ ul {
 }
 
 .status {
-  margin-bottom: 10px;
+  margin-bottom: 0.625rem;
 }
 
 .square {
   background: #fff;
   border: 5px solid #073b4c;
   float: left;
-  font-size: 180px;
+  font-size: 11.25rem;
   font-weight: bold;
-  line-height: 34px;
-  height: 200px;
-  margin-right: -1px;
-  margin-top: -1px;
-  padding: 10px;
+  line-height: 2.125rem;
+  height: 12.5rem;
+  margin-right: -0.0625rem;
+  margin-top: -0.0625rem;
+  padding: 0.625rem;
   text-align: center;
-  width: 200px;
+  width: 12.5rem;
   color: #118ab2;
 }
 
@@ -60,23 +65,23 @@ ul {
 .game {
   display: flex;
   flex-direction: row;
-  padding: 5px;
+  padding: 0.3125rem;
 }
 
 .game-info {
-  margin-left: 50px;
+  margin-left: 3.125rem;
 }
 
 img:nth-child(1) {
-  max-width: 30px;
+  max-width: 1.875rem;
 }
 
 .btn {
-  width: 400px;
-  height: 50px;
-  border-radius: 40px;
+  width: 25rem;
+  height: 3.125rem;
+  border-radius: 2.5rem;
   font-family: inherit;
-  font-size: 30px;
+  font-size: 1.875rem;
 }
 
 /* .list {
@@ -86,8 +91,8 @@ img:nth-child(1) {
 
 div:nth-child(1) {
   color: white;
-  font-size: 50px;
-  border-left: 10px;
+  font-size: 3.125rem;
+  border-left: 0.625rem;
 }
 
 .game-board {
@@ -96,6 +101,61 @@ div:nth-child(1) {
 }
 
 li::marker {
-  margin-left: 10px;
-  padding-left: 10px;
+  margin-left: 0.625rem;
+  padding-left: 0.625rem;
+}
+
+@media screen and (max-width: 1280px) {
+  .square {
+    font-size: 5rem;
+    height: 7rem;
+    width: 7rem;
+  }
+}
+@media screen and (max-width: 880px) {
+  body {
+    background-image: no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  .square {
+    font-size: 2rem;
+    height: 4rem;
+    width: 4rem;
+  }
+  .btn {
+    width: 15rem;
+    height: 1.5rem;
+    font-size: 1rem;
+  }
+  div:nth-child(1) {
+    font-size: 1rem;
+    border-left: 0.225rem;
+  }
+}
+@media screen and (max-width: 520px) {
+  body {
+    background-image: no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+  .square {
+    font-size: 1.5rem;
+    height: 2.75rem;
+    width: 2.75rem;
+    padding: 0;
+  }
+  .btn {
+    width: 6rem;
+    height: 1rem;
+    font-size: 0.5rem;
+  }
+  div:nth-child(1) {
+    font-size: 1rem;
+    border-left: 0.225rem;
+  }
 }
